--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SharekTest</string>
+    <string name="app_name">Sharek</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_home_page">HomePage</string>
 
@@ -12,4 +12,6 @@
     <string name="title_activity_product_page">ProductPage</string>
     <string name="title_activity_contact_us">ContactUs</string>
     <string name="title_activity_add_share">AddShare</string>
+    <string name="currency">EGP/Day</string>
+
 </resources>
