--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,49 @@
 <resources>
     <string name="app_name">Sharek</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_home_page">HomePage</string>
+    <string name="title_activity_home_page">Sharek</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_my_profile">MyProfile</string>
+    <string name="title_activity_notifications">Notifications</string>
     <string name="title_activity_maps">Map</string>
-    <string name="title_activity_search_page">SearchPage</string>
+    <string name="title_activity_search_page">Search for product</string>
     <string name="title_activity_maps_">Map</string>
-    <string name="title_activity_product_page">ProductPage</string>
+    <string name="title_activity_product_page">Product</string>
     <string name="title_activity_contact_us">ContactUs</string>
-    <string name="title_activity_add_share">AddShare</string>
+    <string name="title_activity_add_share">Add Share</string>
     <string name="currency">EGP/Day</string>
+    <string name="large_text">
+        "Material is the metaphor.\n\n"
+
+        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
+        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
+        "technologically advanced and open to imagination and magic.\n"
+        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
+        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
+        "flexibility of the material creates new affordances that supercede those in the physical "
+        "world, without breaking the rules of physics.\n"
+        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
+        "interact, and exist in space and in relation to each other. Realistic lighting shows "
+        "seams, divides space, and indicates moving parts.\n\n"
+
+        "Bold, graphic, intentional.\n\n"
+
+        "The foundational elements of print based design typography, grids, space, scale, color, "
+        "and use of imagery guide visual treatments. These elements do far more than please the "
+        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
+        "imagery, large scale typography, and intentional white space create a bold and graphic "
+        "interface that immerse the user in the experience.\n"
+        "An emphasis on user actions makes core functionality immediately apparent and provides "
+        "waypoints for the user.\n\n"
+    </string>
+    <string name="error_502">oops! Something went wrong, try again later</string>
+    <string name="error_500">Sorry, we have a system glitch, try again later</string>
+    <string name="error_401">Username or password is incorrect</string>
+    <string name="error_unauthorized">Login or register to use this feature</string>
+    <string name="error_default">Please check your internet connection</string>
+    <string name="title_activity_splash_screen">SplashScreenActivity</string>
+
 
 </resources>
