[Technical]Handle Points notification case. [Technical]Upload poster & National ID Images. [Technical]Add rating activity. [Technical]Prevent user from proposing to his poster.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,7 @@
     <string name="error_unauthorized">Login or register to use this feature</string>
     <string name="error_default">Please check your internet connection</string>
     <string name="title_activity_splash_screen">SplashScreenActivity</string>
+    <string name="title_activity_rating">Rate</string>
 
 
 </resources>
